<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.jlo.talendcomp</groupId>
	<artifactId>jlo-talendcomp-excel</artifactId>
	<version>13.1</version>
	<name>Talend Excel Components</name>
	<organization>
		<name>Jan Lolling</name>
	</organization>
	<dependencies>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
			<exclusions>
				<exclusion>
					<artifactId>stax-api</artifactId>
					<groupId>stax</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.2</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>de.cimt.talendcomp</groupId>
				<artifactId>cimt-talendcomp-maven-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<copyFromSourceBaseDir>${project.basedir}/talend_component</copyFromSourceBaseDir>
					<componentBaseDir>${project.basedir}/talend_component</componentBaseDir>
					<studioUserComponentFolder>${custom_component_folder}</studioUserComponentFolder>
				</configuration>
				<executions>
					<execution>
						<id>tFileExcelWorkbookOpen</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelWorkbookOpen</componentName>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelWorkbookSave</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelWorkbookSave</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelSheetInput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelSheetInput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelSheetInputUnpivot</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelSheetInputUnpivot</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelSheetOutput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelSheetOutput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelSheetList</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelSheetList</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelReferencedCellInput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelReferencedCellInput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelReferencedCellOutput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelReferencedCellOutput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelNamedCellInput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelNamedCellInput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
					<execution>
						<id>tFileExcelNamedCellOutput</id>
						<goals>
							<goal>component</goal>
						</goals>
						<configuration>
							<componentName>tFileExcelNamedCellOutput</componentName>
							<noJars>true</noJars>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>